# claudia-platform

./: .gitignore  Claudia項目README更新請求__2025-07-10T08-24-42.md  README-CH.MD  REUSABLE_COMPONENTS_ANALYSIS.md  netlify.toml  package-lock.json  pyproject.toml  windsurf_deployment.yaml
cc_agents/: Core Principles.md  開放原始碼專案分析專家.json
docs/: PROMPT_GUIDE.md
scripts/: restart-dev.sh
src/components/: AgentTemplates.tsx  CommandPalette.tsx  EnhancedDashboard.tsx  EnhancedMCPManager.tsx  EnhancedTimeline.tsx  EnhancedUsageDashboard.tsx  SessionManager.tsx  SessionSnapshot.tsx  SessionSnapshotManager.tsx  SimpleDiffViewer.tsx  SimpleSnapshotManager.tsx  SnapshotDiffViewer.tsx  SnapshotQuickActions.tsx
src/components/ui/: checkbox.tsx  progress.tsx
tests/: test_main.py
